...
                            }
                            .padding(.vertical, 5)
                        }
                    }
                }
            }
            .navigationTitle("Favoriten")
            .onAppear {
                viewModel.loadFavorites()  // Favoriten laden
            }
        }
    }
}
...
